# museums-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEX.md  Dockerfile  LICENSE  Makefile  README.md  app.py  drizzle.config.ts  eslint.config.js  mypy.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: AGENT_INDEX.md  ARCHITECTURE.md  DECISIONS.md  DESIGN_DIRECTION.md  DEVELOPMENT.md  ROADMAP.md  TESTING.md  sources.md
drizzle/: 0000_init.sql
drizzle/meta/: _journal.json
github/workflows/: ci.yml
public/favicons/: browserconfig.xml  manifest.json
scripts/: generate-favicons.mjs  migrate-if-configured.mjs
src/: types.ts
src/app/: globals.css  layout.tsx  not-found.tsx
src/app/account/: page.tsx
src/app/login/: page.tsx
src/app/magic-link/: page.tsx
src/components/: AccountPanel.tsx  AuthFlow.test.tsx  AuthFlow.tsx  ClientShell.tsx  HomePage.test.tsx  HomePage.tsx  Icons.tsx  Layout.tsx  MagicLinkClient.tsx  MuseumCard.tsx  SidePanel.tsx  ThemeSwitcher.test.tsx  ThemeSwitcher.tsx
src/data/: museums.generated.ts  museums.test.ts  museums.ts
src/db/: index.test.ts  index.ts  schema.ts
src/lib/: auth.test.ts  auth.ts  favicons.test.ts  image.ts  storage.ts  theme.test.ts  theme.ts
src/server/: magicTokens.ts  users.test.ts  users.ts
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
tests/: test_app.py
tests/e2e/: favicons.spec.ts  mobile.spec.ts  smoke.spec.ts
(+5 files in other folders)
